feat: add new assets, update styles, and refactor layout for Growth School
- Added new favicon and logo assets in various formats.
- Updated Tailwind configuration with new colors and font settings.
- Refactored the main layout file to include new styles and meta tags.
- Added new UI components and updated existing ones for better functionality.

--- a/package.json
+++ b/package.json
@@ -64,13 +64,17 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/react": "^2.0.7",
+    "@radix-ui/react-slot": "^1.2.0",
     "@vinejs/vine": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.6.1",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tailwind-merge": "^3.2.0"
   },
   "hotHook": {
     "boundaries": [
