--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "reflect-metadata": "^0.2.2",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0"
   },
   "hotHook": {
