--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/react": "^2.0.7",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@vinejs/vine": "^3.0.0",
     "class-variance-authority": "^0.7.1",
@@ -73,6 +74,7 @@
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-phone-number-input": "^3.4.12",
     "reflect-metadata": "^0.2.2",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0"
