--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "growth-school-adonisjs",
+  "name": "growth-school-backend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -27,8 +27,8 @@
     "#policies/*": "./app/policies/*.js",
     "#abilities/*": "./app/abilities/*.js",
     "#database/*": "./database/*.js",
-    "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
+    "#tests/*": "./tests/*.js",
     "#config/*": "./config/*.js"
   },
   "devDependencies": {
@@ -36,48 +36,29 @@
     "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.0",
     "@adonisjs/tsconfig": "^1.4.0",
+    "@japa/api-client": "^3.0.3",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
-    "@swc/core": "1.10.16",
+    "@swc/core": "1.10.7",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.13.2",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.20.1",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.0",
     "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.7.3",
-    "vite": "^6.1.0"
+    "typescript": "~5.7"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.3.1",
     "@adonisjs/core": "^6.17.2",
     "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/inertia": "^3.1.0",
     "@adonisjs/lucid": "^21.6.0",
-    "@adonisjs/session": "^7.5.1",
-    "@adonisjs/shield": "^8.1.2",
-    "@adonisjs/static": "^1.1.1",
-    "@adonisjs/vite": "^4.0.0",
-    "@inertiajs/react": "^2.0.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-slot": "^1.2.0",
     "@vinejs/vine": "^3.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "edge.js": "^6.2.1",
     "luxon": "^3.6.1",
     "pg": "^8.14.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-phone-number-input": "^3.4.12",
-    "reflect-metadata": "^0.2.2",
-    "swiper": "^11.2.6",
-    "tailwind-merge": "^3.2.0"
+    "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
     "boundaries": [
